--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -38,8 +38,10 @@ main {
 
 h3 {
   font-family: Anton, sans-serif;
+  font-size: 20px;
 }
 
 p {
   font-family: 'Barlow Condensed', sans-serif;
+  font-size: 18px;
 }
